# part-8

./: .gitignore  01. Classi.ipynb  02. Sistemi Dinamici Tempo Discreti.ipynb  03. Esercizio - Crescita Logistica.ipynb  04. Esercizio - Modello di Ricker - sol.ipynb  04. Esercizio - Modello di Ricker.ipynb  05. Esercizio - Modello di Beverton-Holt - sol.ipynb  05. Esercizio - Modello di Beverton-Holt.ipynb  06. Esercizio - Modello di Shepherd - sol.ipynb  06. Esercizio - Modello di Shepherd.ipynb  07. Esercizio - Dosaggio di un Farmaco - sol.ipynb  07. Esercizio - Dosaggio di un Farmaco.ipynb  print-pdf.sh  pyproject.toml  requirements.txt  rise.css
base/: sim.py
esempio/: vc.py
sol/: bh.py  dd.py  logi.py  ricker.py  shepherd.py
